# estructuras-de-datos

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE  Makefile  README.md  build.sh
docs/BTree/: README.md
docs/BTree/ES/: README.md
docs/avlTree/: README.md
docs/avlTree/ES/: README.md
docs/binarySearchTree/: README.md
docs/binarySearchTree/ES/: README.md
docs/doublyCircularList/: README.md
docs/doublyCircularList/ES/: README.md
docs/doublyLinkedList/: README.md
docs/doublyLinkedList/ES/: README.md
docs/linkedList/: README.md
docs/sparceMatrix/: README.md  pokeball.json
frontend/: .env  .eslintrc.cjs  Dockerfile  package-lock.json  package.json
include/: BTree.h  DoublyLinkedList.cpp  MyClasss.cpp  avlTree.h  binarySearchTree.h  doublyCircularList.h  doublyLinkedList.h  linkedList.cpp  linkedList.h  redBlackTree.h  sparceMatrix.h
lib/: MyClass.h  linkedList.h
scripts/: build.sh  generate_graphs.sh
src/: AVLTree.cpp  AVLTreeEndpoints.cpp  BTree.cpp  binarySearchTree.cpp  binarySearchTreeEndpoints.cpp  doublyCircularList.cpp  doublyCircularListEndpoints.cpp  doublyLinkedList.cpp  doublyLinkedListEndpoints.cpp  ejecutable  linkedList.cpp  linkedListEndpoints.cpp  main.cpp  redBlackTree.cpp  sparseMatrix.cpp
src/graphviz/: linkedList.dot
src/server/: BTreeEndpoints.cpp  binarySearchTreeEndpoints.cpp  doublyCircularListEndpoints.cpp  redBlackTreeEndpoints.cpp  sparseMatrixEndpoints.cpp
utils/graphviz/: avlTree.dot  binarySearchTree.dot  doublyCircularList.dot  doublyLinkedList.dot  linkedList.dot  sparseMatrix.dot
(+32 files in other folders)
